git squash feat/24/branches
.